[package]
name = "cafe"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["serde", "v4"] }
clippy = { version = "*", optional = true }

[features]
default = []
